[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/DLCMANAGER.gd" type="Script" id=1]

[node name="DLCMANAGER" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dlcs" type="ItemList" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="RemoveDLC" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 189.0
margin_bottom = 20.0
disabled = true
text = "KEY_OPTIONS_REMOVE_DLC"
[connection signal="item_selected" from="VBoxContainer/dlcs" to="." method="_on_dlcs_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/dlcs" to="." method="_on_dlcs_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveDLC" to="." method="_on_RemoveDLC_pressed"]
